Bug 1576990 - Set durations on frames for the WMF decoder. r=dminor a=lizzard

This is a back out of changeset c52127007a01, i.e. reverts bug 1560440. That bug
was itself reverting a prior bug where we started setting the duration.

There are two scenarios involved, each with their own issues:
- We don't set the duration when feeding the decoder (what we're doing prior to
  this change). In this case the decoder will estimate durations for all
  samples. This works in many cases, but leads to issues with files that have
  non-uniform durations - as seen in bug 1576990 (this bug).
- We do set the duration when feeding the decoder (what will happen after this
  change). In this case the decoder will not estimate durations, except it still
  seems to do so when fed 0 duration samples. Since our demuxing pipeline can
  create 0 duration samples, this leads to issues with such files (as seen in
  bug 1560440).

This patch fixes the former of the above, and the next patch in the chain will
address the latter.

Differential Revision: https://phabricator.services.mozilla.com/D46515

--HG--
extra : source : 3f2fc282b9c7deef92adf2bd9d6c974c6fc4cf82