dom/media/platforms/wmf/WMFAudioMFTManager.cpp
@@ -186,7 +186,8 @@ bool WMFAudioMFTManager::Init() {
 HRESULT
 WMFAudioMFTManager::Input(MediaRawData* aSample) {
   return mDecoder->Input(aSample->Data(), uint32_t(aSample->Size()),
-                         aSample->mTime.ToMicroseconds());
+                         aSample->mTime.ToMicroseconds(),
+                         aSample->mDuration.ToMicroseconds());
 }
 
 HRESULT
